--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Justine Clarke, CODER. DEVELOPER. DESIGNER. </title>
+		
+		<!-- main stylesheet link --> 
+		<link rel= "stylesheet" type= "text/css" href= "/css/main.css" > 
 	</head>
 	<body>
 		<nav>
