--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     		</ul>
 		</nav>
 		<div class="container">
+		---
+		layout: default
+		title: Justine Clarke, DEVELOPER
+		---
     		<div class="blurb">
         		<h1>Hi there, I'm Justine Clarke !</h1>
 				<p> Coder. Developer. Designer <a href="/about">Read more about my life...</a></p>
