--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
-	---
-		layout: default
-		title: Justine Clarke, DEVELOPER
-	---
-
 	<head>
-		<title>Justine Clarke, CODER. DEVELOPER. DESIGNER. </title>
-		
-		<!-- main stylesheet link --> 
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<title>Hank Quinlan, Horrible Cop</title>
 	</head>
 	<body>
 		<nav>
@@ -22,15 +14,15 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Justine Clarke !</h1>
-				<p> Coder. Developer. Designer <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:justineclarke_2017@depauw.edu">email</a></li>
-        		<li><a href="https://github.com/jussic">github.com/jussic</a></li>
+        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
-</html
+</html>
