--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Justine Clarke, Developer
 		<footer>
     		<ul>
         		<li><a href="mailto:justineclarke_2017@depauw.edu">email</a></li>
-        		<li><a href="https://github.com/jussic">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/jussic">github.com/jussic</a></li>
 			</ul >
 		</footer>
 	</body>
