--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     		</ul>
 		</nav>
 		<div class="container">
----
-layout: default
-title: Justine Clarke, Developer
----
-<div class="blurb">
+		
+		---
+		layout: default
+		title: Justine Clarke, DEVELOPER
+		---	
+		<div class="blurb">
 	<h1>Hi there, I'm Justine Clarke!</h1>
 	<p> Developer. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
