--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html>
-		---
-		layout: default
-		title: Justine Clarke, DEVELOPER
-		---
 	<head>
 		<title>Justine Clarke, Developer </title>
 		<!-- link to main stylesheet -->
@@ -19,7 +15,10 @@
     		</ul>
 		</nav>
 		<div class="container">
-		
+		---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
 		<div class="blurb">
 	<h1>Hi there, I'm Justine Clarke!</h1>
 	<p> Developer. <a href="/about">Read more about my life...</a></p>
