--- a/project3/index.html
+++ b/project3/index.html
@@ -1,1 +1,4 @@
 <h1> This will be a challenge to code something in the language chosen for 3 days/week </h1> 
+
+
+<p> Check out the projects I worked on with youung teens over the summer <a href = "jussic.github.io"></a></p>
