--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,29 @@
-<h1> ABOUT ME  </h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Justine Clarke, Developer </title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/project3">Project3</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+		<div class="blurb">
+</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:justineclarke_2017@depauw.edu">email</a></li>
+        		<li><a href="https://github.com/jussic">github.com/jussic</a></li>
+			</ul >
+		</footer>
+	</body>
+</html>
