--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 		<div class="blurb">
 	<h1>Hi there, I'm Justine Clarke!</h1>
-	<p> Developer. <a href="/about">Read more about my life...</a></p>
+	<p> Designer.Developer. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
