--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		
+		<style> 
+		#header {
+			background-color:  #2342; 
+		}
+		
+		</style>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -17,7 +24,8 @@
 		</nav>
 		<div class="container">
 		<div class="blurb">
-	<h1>Hi there, I'm Justine Clarke!</h1>
+	<h1 class = "header">Hi there, I'm Justine Clarke!</h1>
+
 	<p> Designer.Developer... <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
 		</div><!-- /.container -->
