--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/project3">Project3</a></li>
+        		<li><a href="/heroes">Heroes</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
