trying to get this to show up

--- a/Heroes/index.html
+++ b/Heroes/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+      <head>
+
 <title>Twitter Bootstrap : Basic Code Block</title>
 <link rel="stylesheet"
       href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
@@ -7,11 +9,29 @@
      href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
 <script src="http://code.jquery.com/jquery.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-</head>
-<style>
-</style>
 
+		<title>Justine Clarke, Developer </title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/project3">Project3</a></li>
+        		<li><a href="/heroes">Heroes</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+		<div class="blurb">
+</div><!-- /.blurb -->
+		</div><!-- /.container -->
       
+ <iframe>
 <div class="main-container">
       <!-- NAVIGATION BAR -->
   <ul>
@@ -60,5 +80,7 @@
 
 </div>
 <!-- main div -->
+</iframe>     
+</body>
 
 </html> 
