--- a/cv/index.html
+++ b/cv/index.html
@@ -1,3 +1,47 @@
-<h1> MY CV <h1> 
+<div class="main-container">
+      <!-- NAVIGATION BAR -->
+  <ul>
+  <li><a class="active" href="http://codepen.io/Jussic/pen/bpqWLy?editors=1000">Nanny of Marooons</a></li>
+  <li><a href="http://codepen.io/Jussic/pen/bpqZyg?editors=1000" target= "_blank">Paul Bogle</a></li>
+  <li><a href="http://codepen.io/Jussic/pen/reyRgK">Sam Sharpe</a></li>
+  <li><a href="http://codepen.io/Jussic/pen/XdMGwB">Sir Alexander Bustamante</a></li>
+    <li><a href="http://codepen.io/Jussic/pen/zqZbQJ">Marcus Garvey</a></li>
+    <li><a href="http://codepen.io/Jussic/pen/EKWMzd">Norman Washington Manley</a></li>
+    <li><a href="http://codepen.io/Jussic/pen/aNJMrQ">George William Gordon</a></li>
+</ul>
+    <h1 id = "title" class="text-primary"> <center> Jamaica's National Heroine: <br> Nanny of the Maroons </center> </h1>
+  <div> <img src="http://jis.gov.jm/media/nanny.jpg"> </img>
+  
+  <!-- FIRST HALF -->
+        <div id = "info" style="position:relative; left:0px; top: -200px; background-color:gold;">
+          <h2 style = "text-align: left";> QUICK FACTS </h2>      
+      <p style ="font-size:px"; >She is remembered for the inspiration she gave to her people in fighting the English Oppressors in the early 18th Century. <br><br>
+      Nanny was a leader of her village, Nanny Town in the parish of Portland, Jamaica. <br><br>
+      According to Beverley Carey -
+    "The Maroon Story", Nanny died sometime between 1758 - 1762. <br><br>
+        Legend has it that she possesses super human power <br><br>
+      </p>
+  </div>
+  
+<!-- SECOND  HALF -->
+    <div id ="three" class= "secondary-con">
+      <div id= "two-rr">
+        <h2> MAROON HISTORY </h2>
+        <p> Nanny was a leader of the Maroons at the beginning of the 18th century. She was known by both the Maroons and the British settlers as an outstanding military leader who became, in her lifetime and after, a symbol of unity and strength for her people during times of crisis.
+        She was particularly skilled in organising the guerilla warfare carried out by the Eastern Maroons to keep away the British troops who attempted to penetrate the mountains to overpower them. <br> <br>
+          There are many legends about Nanny among the Maroons. Some even claim that there were several women who were leaders of the Maroons during this period of history. But all the legends and documents refer to Nanny of the First Maroon War, as the most outstanding of them all, leading her people with courage and inspiring them to struggle to maintain that spirit of freedom, and life of independence, which was their rightful inheritance.
+          <br><br>On March 31, 1982 the Right Excellent Nanny of the Maroons was conferred the Order of the National Hero.</p>
+      </div>
+    </div>
+    <div class= "black-line"> </div>
 
-<iframe src = "" > </iframe>
+<!-- THIRD  HALF -->
+   <div id ="three" class= "secondary-con">
+      <div id= "two-rr">
+          <h1 style = "font-size: 72px";> <a href ="http://jis.gov.jm/heroes/nanny-of-the-maroons/"  TARGET = "_blank" style="color: rgb(255,0,0)"><font color="#FF0000	"> LEARN MORE</font></a></h1>
+        </div>
+      </div>
+    </div>
+    <div class= "black-line"> </div>
+
+</div>
