added style sheet

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,3 +1,7 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mains.css">
+</head>
+
 <div class="main-container">
       <!-- NAVIGATION BAR -->
   <ul>
