Added navigation bar

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,18 @@
 <head>
 <link rel="stylesheet" type="text/css" href="mains.css">
 </head>
+	<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/project3">Project3</a></li>
+        		<li><a href="/heroes">Heroes</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
 
+<br> <hr> 
 <div class="main-container">
       <!-- NAVIGATION BAR -->
   <ul>
