--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,9 @@
 <head>
 <link rel="stylesheet" type="text/css" href="mains.css">
 </head>
+<body>
+	
+
 	<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -11,8 +14,8 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
-
 <br> <hr> 
+<div>
 <div class="main-container">
       <!-- NAVIGATION BAR -->
   <ul>
@@ -60,3 +63,5 @@
     <div class= "black-line"> </div>
 
 </div>
+</div>
+</body>
